--- a/TestAutomation/pom.xml
+++ b/TestAutomation/pom.xml
@@ -5,5 +5,5 @@
   <artifactId>TestAutomation</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - TestAutomation</name>
-  <url>http://maven.apache.org</url>
+  <url>http://maven.apache.or</url>
 </project>
